--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@ layout: compress
       </footer>
     </div>
 
-    <!-- {% if site.ga_analytics %}
+    {% if site.ga_analytics %}
      <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -47,6 +47,6 @@ layout: compress
        ga('create', '{{ site.ga_analytics }}', 'auto');
        ga('send', 'pageview');
      </script>
-    {% endif %} -->
+    {% endif %}
   </body>
 </html>
