--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,20 +33,9 @@ layout: compress
       </main>
 
       <footer class="footer">
-        <p><a href="https://github.com/essentialenemy/noir/">Noir</a> theme for <a href="https://jekyllrb.com/">Jekyll</a> by <a href="https://essentialenemy.com/">Victor Johnson</a>
-		<br><a href="https://github.com/essentialenemy/noir/blob/master/LICENSE.md">Released under MIT License</a></p>
+        <p>Alea iacta est</p>
       </footer>
     </div>
-
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-59340680-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-59340680-1');
-    </script>
 
     {% if site.ga_analytics %}
      <script>
