--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,8 @@ layout: compress
 		<ul id="navigation-list">
 		<li><a href="/archive/">archive</a></li>
 		<li><a href="/tags/">tags</a></li>
-		<li><a href="/categories/">categories</a></li>
+    <li><a href="/categories/">categories</a></li>
+    <li><a href="/about/">about</a></li>
 		</ul>
 		</div>
 		
