--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,6 @@ layout: compress
 
     <div class="container content">
       <header class="masthead">
-	  
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a><br>
           <small>{{ site.tagline }}</small>
@@ -23,10 +22,13 @@ layout: compress
 		<li><a href="/archive/">archive</a></li>
 		<li><a href="/tags/">tags</a></li>
     <li><a href="/categories/">categories</a></li>
+    <li><a href="/funstuff/">fun stuff</a></li>
     <li><a href="/about/">about</a></li>
 		</ul>
 		</div>
-		
+    {% if debug == True %}
+      <p class="green"><small><b>debug</b> == True </small></p>
+    {% endif %}		
       </header>
 
       <main>
@@ -38,7 +40,7 @@ layout: compress
       </footer>
     </div>
 
-    {% if site.ga_analytics %}
+    {% if site.ga_analytics and debug != True %}
      <script>
        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
